tests/snapshots/examples_fixtures/aoc__2025__aoc_day1_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day1_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `parse_rotations`.

  examples/aoc/2025/aoc_day1_haskell_style.flx:43:9
   |
43 |         parse_rotations(rest, acc)
   |         ^^^^^^^^^^^^^^^

Hint:
  Define it first: let parse_rotations = ...;

Help:
  Did you mean `parse_rotation`?


error[E004]: Undefined Variable

I can't find a value named `reverse`.

  examples/aoc/2025/aoc_day1_haskell_style.flx:52:14
   |
52 |         _ -> reverse(acc),
   |              ^^^^^^^

Hint:
  Define it first: let reverse = ...;


error[E001]: Duplicate Name

Duplicate binding: `lines` is already defined.

  examples/aoc/2025/aoc_day1_haskell_style.flx:102:1
    |
102 | let lines = to_list(read_lines("examples/io/aoc_day1.txt"))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  examples/aoc/2025/aoc_day1_haskell_style.flx:0:1
  |

Found 3 errors.
== stdout ==
<not executed>
